Removed ArrayDeques from AsteroidManager and replaced them with ArrayLists.